# AlpesPartners

./: .coveragerc  .dockerignore  .env.bff.example  .env.example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  Campanias-CRUD.postman_collection.json  Dockerfile.publisher  Dockerfile.service  Dockerfile.worker  Makefile  Procfile  README.md  README_DEPLOY_GCP.md  README_DOCKER.md  alpespartners.Dockerfile  compose.yml  docker-compose.dboutbox.yml  docker-compose.yml  entrypoint.sh  order_payload.json  package.json  payload.json  postman_collection_alpespartners.json  postman_collection_alpespartners_host.json  postman_collection_alpespartners_saga.json  postman_collection_alpespartners_saga.json.new  postman_environment_alpespartners.json  postman_environment_alpespartners_host.json  pyproject.toml  requirements.txt  run_pagos_saga_publisher.sh  test_bff_http.py  OAOAOBOBexit
.devcontainer/: devcontainer.json  setup.sh
.github/: copilot-instructions.md
configuraciones/: config_cluster.bash  config_images.bash  config_manifests.bash  config_pulsar.bash
docs/: DEPLOY_HEROKU.md  _copilot_stack_detect.md  postgres-ci.md  postgres-image.md
migrations/: V1__init_schema.sql  V2__add_id_cliente.sql
newman/: newman-run-report-2025-09-21-01-48-43-603-0.json  newman-run-report-2025-09-21-01-49-12-829-0.json  newman-run-report-2025-09-21-01-51-48-597-0.json  newman-run-report-2025-09-21-01-52-56-199-0.json
postman/: AlpesPartners-BFF.postman_collection.json  AlpesPartners-BFF.postman_collection.json.new  AlpesPartners-BFF.postman_environment.json  env.json  (+1 more)
(+210 files in other folders)
