[project]
name = "alpespartners"
version = "1.0.0"
authors = [
  { name="Grupo 7", email="w.piarpuzan@uniandes.edu.co" },
]
description = "Proyecto Alpes Partners"
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  ".", "src",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"